# order-entry-cli

./: .env.example  README.md  pyproject.toml
src/hermes/: context.py  main.py  order_entry.py
src/hermes/options/: utils.py
src/hermes/session/: alpaca.py  db.py  helpers.py  main.py  session.py
src/hermes/trading/: order_entry.py  risk_manager.py
src/trading_analytics/db/: db.py  setup.py
src/trading_analytics/processes/: log_account_info.py
src/trading_analytics/trading_analytics_dbt/models/: trades_view.sql
src/trading_order_entries/: context.py  main.py
src/trading_order_entries/db/: db.py  utils.py
src/trading_order_entries/options/: main.py  utils.py
src/trading_order_entries/session/: alpaca.py  main.py
src/trading_order_entries/trading/orders/: main.py  orders.py  utils.py
tests/order_entry/: test_get_quote.py  test_get_side_object.py  test_handle_order_entry_integration.py  test_set_qty.py  test_validate_orders.py
tests/risk_manager/: test_price_delta.py  test_take_profit.py
