[project]
name = "hermes"
version = "0.1.0"
description = "Order CLI for Alpaca"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.43.2",
    "asyncio>=4.0.0",
    "duckdb>=1.4.3",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
]

[project.scripts]
hermes = "hermes.main:cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pytest>=9.0.2",
]
